--- a/style/style.css
+++ b/style/style.css
@@ -6,14 +6,31 @@ body {
     font-family: 'Josefin Sans', sans-serif;
     color: black;
     animation: fadeIn;
-    animation-duration: 5s;
+    animation-duration: 4s;
+    text-shadow: 1px 2px rgba(0, 0, 0, 0.19);
 }
 
 #title {
     font-size: 100px;
     text-align: center;
     font-weight: bold;
-    margin-top: 10px;
+    padding: 50px;
+    background: black;
+    color: white;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.6), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-shadow: none;
+    animation: backInDown;
+    animation-duration: 2s;
+}
+
+.fade:hover {
+    background-image: none;
+    background-color: black;
+    color: white;
+    border-color: white;
+    transition: .3s ease all;
 }
 
 #rule {
@@ -22,67 +39,125 @@ body {
 }
 
 #rules {
-    margin-top: 60px;
+    margin-top: 20px;
+    padding: 10px;
+    border: 2px black solid;
+    border-radius: 10px;
+    width: fit-content;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.6), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #question-no {
     margin-top: 80px;
     text-align: center;
+    
 }
 
 #question {
+    background-image: url(/js.png);
     text-align: center;
     font-weight: bold;
     font-size: 1.5rem;
-    margin-bottom: 30px;
+    cursor: zoom-in;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    padding: 10px;
+    border: 2px black solid;
+    border-radius: 10px;
+    width: fit-content;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.6), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #question:hover {
+    background-image: none;
+    background: black;
+    color: white;
+    border-color: white;
     transform: scale(1.2);
+    transition: .6s ease all;
 }
 
 #input{
+    background: black;
+    color: white;
     border: 2px solid white;
+    border-radius: 5px;
     display: block;
     margin: auto;
-    background-color: black;
-    color: rgb(75, 198, 238);
     font-size: 20px;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.6), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #submit {
-    background-color: rgb(33, 106, 33);
-    color: white;
+    background: rgb(247, 223, 30);
+    color: black;
     border: 2px solid black;
+    border-radius: 5px;
     display: block;
     margin: auto;
     margin-top: 2px;
+    margin-bottom: 80px;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.6), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    width: 85px;
+    height: 35px;
+    cursor: pointer;
+}
+
+#submit:hover {
+    background-color: black;
+    color: white;
+    border-color: white;
+    transition: .3s ease all;
+    transform: rotateY(1turn);
+}
+
+.previous-score {
+    background-image: url(/js.png);
 }
 
 #correct-score {
-    margin-top: 40px;
-    font-size: 30px;
+    font-size: 35px;
     font-weight: bold;
     color: rgb(33, 106, 33);
 }
 
 #incorrect-score {
-    font-size: 30px;
+    font-size: 35px;
     font-weight: bold;
     color: rgb(147, 1, 147);
 }
 
-#previous-question-results {
-margin-top: 80px;
+.borders {
+    padding: 10px;
+    border: 2px black solid;
+    border-radius: 10px;
+    width: fit-content;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.6), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-#previous-answer-results {
-    margin-top: 20px;
+.previous-results {
+    margin-top: 60px;
+    background-image: url(/js.png);
 }
 
 #reset {
-    margin-top: 80px;
-    background-color: rgb(147, 1, 147);
-    color: white;
+    text-align: center;
+    margin: 40px 0 20px 20px;
+    background: rgb(247, 223, 30);
+    color: black;
     border: 2px dotted black;
+    border-radius: 5px;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.6), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    width: 85px;
+    height: 55px;
+}
+
+#reset:hover {
+    background-color: red;
+    color: white;
+    transition: 1s ease all;
+    transform: rotateX(3turn);
+    cursor: pointer;
 }
